EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Trigger_Handler__c/fields/hed__Asynchronous__c.field-meta.xml
<CustomField>
    <fullName>hed__Asynchronous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this class should run asynchronously in this transaction, for any of its After events.</description>
    <inlineHelpText>Indica que este módulo debe ejecutarse de forma asíncrona en esta transacción, para cualquiera de estos eventos posteriores.</inlineHelpText>
    <label>Asynchronous</label>
    <type>Checkbox</type>
</CustomField>