EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Trigger_Handler__c/fields/hed__Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>hed__Filter_Field__c</fullName>
    <description>The name of the field used for filtering.</description>
    <inlineHelpText>El nombre del campo utilizado para el filtrado.</inlineHelpText>
    <label>Filter Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>