EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Trigger_Handler__c/fields/hed__Load_Order__c.field-meta.xml
<CustomField>
    <fullName>hed__Load_Order__c</fullName>
    <description>The order in which this class should run. The order is in relation to other triggers on the same object with the same Trigger Actions, for example, all “before insert” triggers on Account.</description>
    <inlineHelpText>Orden en el que esta clase debe ejecutarse. El orden es en relación a otros desencadenadores en el mismo objeto con las mismas acciones de desencadenador, como por ejemplo todos los desencadenadores “antes de insertar” en Cuenta.</inlineHelpText>
    <label>Load Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>