EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Trigger_Handler__c/fields/hed__Object__c.field-meta.xml
<CustomField>
    <fullName>hed__Object__c</fullName>
    <description>The name of the object the class should act on, for example, Account, Contact, Opportunity.</description>
    <inlineHelpText>El nombre del objeto sobre el que debe actuar esta clase, como por ejemplo Cuenta, Contacto, Oportunidad.</inlineHelpText>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>