EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Trigger_Handler__c/fields/hed__Owned_by_Namespace__c.field-meta.xml
<CustomField>
    <fullName>hed__Owned_by_Namespace__c</fullName>
    <description>The namespace of the package or Org that will control this Trigger handler.</description>
    <inlineHelpText>El espacio de nombres del paquete u organización que controla este controlador de desencadenadores.</inlineHelpText>
    <label>Owned by Namespace</label>
    <length>15</length>
    <type>Text</type>
</CustomField>