EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Trigger_Handler__c/fields/hed__User_Managed__c.field-meta.xml
<CustomField>
    <fullName>hed__User_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, we no longer push updates to this Trigger Handler. Select this option if you&apos;ve made changes that you don&apos;t want us to overwrite.</description>
    <inlineHelpText>Cuando se selecciona, dejaremos de distribuir actualizaciones a este controlador de desencadenador. Seleccione esta opción si realizó cambios que no desea que sobreescribamos.</inlineHelpText>
    <label>User Managed</label>
    <type>Checkbox</type>
</CustomField>