EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Trigger_Handler__c/fields/hed__Usernames_to_Exclude__c.field-meta.xml
<CustomField>
    <fullName>hed__Usernames_to_Exclude__c</fullName>
    <description>Semicolon separated list of Salesforce usernames that this trigger will NOT run for. Leave blank to run for all users.</description>
    <inlineHelpText>Lista de nombres de usuario de Salesforce separados por punto y coma para los que NO se ejecutará este desencadenador. Dejar en blanco para ejecutar para todos los usuarios.</inlineHelpText>
    <label>Usernames to Exclude</label>
    <type>TextArea</type>
</CustomField>